; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_main.c_hisi_sas_debugfs_iost_cache_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_main.c_hisi_sas_debugfs_iost_cache_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { %struct.hisi_hba* }
%struct.hisi_hba = type { i64 }
%struct.hisi_sas_iost_itct_cache = type { i32* }

@HISI_SAS_IOST_ITCT_CACHE_DW_SZ = common dso_local global i32 0, align 4
@HISI_SAS_IOST_ITCT_CACHE_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.seq_file*, i8*)* @hisi_sas_debugfs_iost_cache_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hisi_sas_debugfs_iost_cache_show(%struct.seq_file* %0, i8* %1) #0 {
  %3 = alloca %struct.seq_file*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.hisi_hba*, align 8
  %6 = alloca %struct.hisi_sas_iost_itct_cache*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %3, align 8
  store i8* %1, i8** %4, align 8
  %11 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %12 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %11, i32 0, i32 0
  %13 = load %struct.hisi_hba*, %struct.hisi_hba** %12, align 8
  store %struct.hisi_hba* %13, %struct.hisi_hba** %5, align 8
  %14 = load %struct.hisi_hba*, %struct.hisi_hba** %5, align 8
  %15 = getelementptr inbounds %struct.hisi_hba, %struct.hisi_hba* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.hisi_sas_iost_itct_cache*
  store %struct.hisi_sas_iost_itct_cache* %17, %struct.hisi_sas_iost_itct_cache** %6, align 8
  %18 = load i32, i32* @HISI_SAS_IOST_ITCT_CACHE_DW_SZ, align 4
  %19 = mul nsw i32 %18, 4
  store i32 %19, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %20

20:                                               ; preds = %38, %2
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* @HISI_SAS_IOST_ITCT_CACHE_NUM, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %43

24:                                               ; preds = %20
  %25 = load %struct.hisi_sas_iost_itct_cache*, %struct.hisi_sas_iost_itct_cache** %6, align 8
  %26 = getelementptr inbounds %struct.hisi_sas_iost_itct_cache, %struct.hisi_sas_iost_itct_cache* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  %29 = load i32, i32* %28, align 4
  %30 = and i32 %29, 65535
  store i32 %30, i32* %9, align 4
  %31 = load %struct.hisi_sas_iost_itct_cache*, %struct.hisi_sas_iost_itct_cache** %6, align 8
  %32 = bitcast %struct.hisi_sas_iost_itct_cache* %31 to i32*
  store i32* %32, i32** %10, align 8
  %33 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %34 = load i32, i32* %9, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @hisi_sas_show_row_64(%struct.seq_file* %33, i32 %34, i32 %35, i32* %36)
  br label %38

38:                                               ; preds = %24
  %39 = load i32, i32* %8, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %8, align 4
  %41 = load %struct.hisi_sas_iost_itct_cache*, %struct.hisi_sas_iost_itct_cache** %6, align 8
  %42 = getelementptr inbounds %struct.hisi_sas_iost_itct_cache, %struct.hisi_sas_iost_itct_cache* %41, i32 1
  store %struct.hisi_sas_iost_itct_cache* %42, %struct.hisi_sas_iost_itct_cache** %6, align 8
  br label %20

43:                                               ; preds = %20
  ret i32 0
}

declare dso_local i32 @hisi_sas_show_row_64(%struct.seq_file*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
